pkg/server/testdata/envoy.yaml
apiVersion: fanplane.io/v1alpha1
kind: EnvoyBootstrap
metadata:
  name: test-id
spec:
  admin:
    access_log_path: /gateway/admin_access.log
    address:
      socket_address: { address: 127.0.0.1, port_value: 9001 }
  static_resources:
    listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8800 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config:
            stat_prefix: ingress_http
            access_log:
            - name: envoy.file_access_log
              config:
                path: /gateway/envoy_access.log
                format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%REQ(X-FRG-RC)%\" \"%REQ(X-FRG-RI)%\"\n"
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match: { prefix: "/iris/settings/" }
                  route:
                    host_rewrite: rc0.ural2.service.us-east-1.dynamic.dev.frgcloud.com
                    cluster: service_ural
                    timeout: 5s
                    retry_policy: {retry_on: 5xx, num_retries: 2, per_try_timeout: 1s}

                - match: { prefix: "/flex/v1/keys" }
                  route:
                    host_rewrite: api.cybersource.com
                    cluster: service_cybersource
                    timeout: 3s
                    retry_policy: {retry_on: 5xx, num_retries: 2, per_try_timeout: 0.5s}

            http_filters:
            - name: envoy.router
    clusters:
    - name: service_ural
      connect_timeout: 5s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      hosts: [{ socket_address: { address: rc0.ural2.service.us-east-1.dynamic.prod.frgcloud.com, port_value: 8443 }}]
      tls_context: { sni: rc0-ural2.prod.frgcloud.com }
      circuit_breakers:
        thresholds:
        - priority: DEFAULT
          max_connections: 1024
          max_pending_requests: 1024
          max_retries: 3

    - name: service_cybersource
      connect_timeout: 3s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      hosts: [{ socket_address: { address: api.cybersource.com, port_value: 8443 }}]
      tls_context: { sni: api.cybersource.com }
