pkg/server/testdata/gateway.yaml
apiVersion: fanplane.io/v1alpha1
kind: Gateway
metadata:
  name: test-gateway
spec:
  listener:
    port: 443
    protocol: HTTPS

  routes:
  - type: CONSUL_DNS
    prefix: /iris/settings/
    service:
      name: ural2
      tag: rc0
    rewrite:
      uri: /promotion/v1/
    connectionPool:
      timeout: 5s
    retryPolicy:
      numRetries: 2
      perTryTimeout: 1s
    loadBalancer:
      type: ROUND_ROBIN

  - type: DNS
    prefix: /flex/v1/keys
    dns:
      address: api.cybersource.com
      port: 443
    retryPolicy:
      numRetries: 2
      perTryTimeout: 500ms
