pkg/server/testdata/raw-listener.yaml
name: listener_0
address:
  socket_address: { address: 0.0.0.0, port_value: 8800 }
filter_chains:
- filters:
  - name: envoy.http_connection_manager
    config:
      stat_prefix: ingress_http
      route_config:
        name: local_route
        virtual_hosts:
        - name: local_service
          domains: ["*"]
          routes:
          - match: { prefix: "/google" }
            route:
              host_rewrite: /
              cluster: google-test
              timeout: 5s
              retry_policy:
                retry_on: 5xx,
                num_retries: 2
                per_try_timeout: 1s
      http_filters:
      - name: envoy.router
